Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/020_procedure_used_as_function_ifcond.xi
f()

g()
{
    if f() {
    }
}
//@PRACOWNIA
//@should_not_typecheck
